packages/kotlin/ttrp-frontend/src/test/resources/negative/fail-002-cycle.ttrp
container a target polars on failure of a """sql
select 1
"""
